<resources>
    <string name="app_name">Prime Pets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_main_toolbar">Prime Pets</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_busca">Procurar por ...</string>
    <string name="title_filter_nav">Filtrar</string>

    <!-- Categorias -->
    <string name="cat_cachorros">Cachorros</string>
    <string name="cat_gatos">Gatos</string>
    <string name="cat_passaros">Pássaros</string>
    <string name="cat_peixes">Peixes</string>
    <string name="cat_exoticos">Exóticos</string>

    <string name="text_dica">Dicas</string>
    <string name="text_novidades">Novidades</string>

    <string name="sem_conexao">Sem Conexão</string>
    <string name="sem_conexao_clique">Clique para tentar novamente</string>
    <string name="modo_mapa">Ver no mapa</string>
    <string name="modo_lista">Ver na lista</string>

    <string name="dialog_filter_title">Filtro</string>
    <string name="dialog_filter_buscar">BUSCAR</string>
    <string name="filter_pet">PETS</string>
    <string name="filter_localizacao">LOCALIZAÇÃO</string>
    <string name="filter_ordenados">RESULTADOS ORDENADOS POR</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Maps -->
    <string name="maps_api_key">AIzaSyA9yWZ0RqgT6ihfOLbosyPr_WdoGA0ORQA</string>

</resources>
