<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#ffffff"
	android:orientation="vertical">

    <View
        android:id="@+id/statusbar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/toolbar_height_dialogs"
		android:background="@color/colorPrimary"
		app:contentInsetEnd="0dp"
		app:contentInsetLeft="0dp"
		app:contentInsetRight="0dp"
		app:contentInsetStart="0dp"
		app:contentInsetStartWithNavigation="0dp"
		app:theme="@style/ToolBarStyle"
		android:elevation="6dp"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_close_filter_dialog"
                android:layout_width="@dimen/dimen_icons_toolbars"
                android:layout_height="@dimen/dimen_icons_toolbars"
                android:layout_marginRight="@dimen/margin_icons"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/ic_close_white" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="20dp"
				android:layout_gravity="right|center_vertical"
				android:text="@string/dialog_filter_title"
				android:textColor="@android:color/white"
				android:textSize="@dimen/text_size_titles"
				android:fontFamily="@string/font_family_medium"
				/>
			<View
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:layout_weight="1" />
			<Button
				android:id="@+id/bt_buscar_filter_dialog"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/margin_icons"
				android:layout_gravity="right|center_vertical"
				android:text="@string/dialog_filter_buscar"
				android:textColor="@android:color/white"
				android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:background="@color/colorBackground">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/filter_localizacao"
			android:textSize="10dp"
			android:paddingLeft="16dp"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
			android:fontFamily="@string/font_family_black"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:paddingTop="18dp"
			android:paddingBottom="18dp"
			android:orientation="vertical"
			android:background="@android:color/white"
			android:elevation="2dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="asdaiuhd iauhsdiau hsihd aiuhsdaui hsd auihsd u ahsiuhd aihd aiudiau hs iuhaid "/>
		</LinearLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/filter_pet"
			android:textSize="10dp"
			android:paddingLeft="16dp"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
			android:fontFamily="@string/font_family_black"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:paddingTop="18dp"
			android:paddingBottom="18dp"
			android:orientation="vertical"
			android:background="@android:color/white"
			android:elevation="2dp">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="asdaiuhd iauhsdiau hsihd aiuhsdaui hsd auihsd u ahsiuhd aihd aiudiau hs iuhaid "/>
		</LinearLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/filter_ordenados"
			android:textSize="10dp"
			android:paddingLeft="16dp"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="12dp"
			android:fontFamily="@string/font_family_black"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:paddingTop="18dp"
			android:paddingBottom="18dp"
			android:orientation="vertical"
			android:background="@android:color/white"
			android:elevation="2dp">
			<android.support.v7.widget.AppCompatSpinner
				android:id="@+id/spn_ordenar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</LinearLayout>

</LinearLayout>
