<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_options_cats"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height_options"
    android:paddingTop="@dimen/toolbar_padding_top_options"
    android:paddingBottom="@dimen/toolbar_padding_bottom_options"
    android:paddingLeft="@dimen/toolbar_padding_lr_options"
    android:paddingRight="@dimen/toolbar_padding_lr_options">

    <LinearLayout
        android:id="@+id/ll_wrapp_options_cat"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height_options"
        android:layout_gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/ll_button_option_cachorros"
            android:layout_width="@dimen/toolbar_width_item_options"
            android:layout_height="@dimen/toolbar_height_options"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:paddingLeft="@dimen/toolbar_padding_lr_item_options"
            android:paddingRight="@dimen/toolbar_padding_lr_item_options"
            android:paddingTop="@dimen/toolbar_padding_tb_item_options"
            android:paddingBottom="@dimen/toolbar_padding_tb_item_options">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="@dimen/toolbar_dimen_image_item_options"
                android:src="@drawable/ic_dog_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_menor"
                android:text="@string/cat_cachorros"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_option_gatos"
            android:layout_width="@dimen/toolbar_width_item_options"
            android:layout_height="@dimen/toolbar_height_options"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:paddingLeft="@dimen/toolbar_padding_lr_item_options"
            android:paddingRight="@dimen/toolbar_padding_lr_item_options"
            android:paddingTop="@dimen/toolbar_padding_tb_item_options"
            android:paddingBottom="@dimen/toolbar_padding_tb_item_options">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="@dimen/toolbar_dimen_image_item_options"
                android:src="@drawable/ic_cat_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_menor"
                android:text="@string/cat_gatos"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_option_passaros"
            android:layout_width="@dimen/toolbar_width_item_options"
            android:layout_height="@dimen/toolbar_height_options"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:paddingLeft="@dimen/toolbar_padding_lr_item_options"
            android:paddingRight="@dimen/toolbar_padding_lr_item_options"
            android:paddingTop="@dimen/toolbar_padding_tb_item_options"
            android:paddingBottom="@dimen/toolbar_padding_tb_item_options">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="@dimen/toolbar_dimen_image_item_options"
                android:src="@drawable/ic_birds_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_menor"
                android:text="@string/cat_passaros"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_option_peixes"
            android:layout_width="@dimen/toolbar_width_item_options"
            android:layout_height="@dimen/toolbar_height_options"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:paddingLeft="@dimen/toolbar_padding_lr_item_options"
            android:paddingRight="@dimen/toolbar_padding_lr_item_options"
            android:paddingTop="@dimen/toolbar_padding_tb_item_options"
            android:paddingBottom="@dimen/toolbar_padding_tb_item_options">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="@dimen/toolbar_dimen_image_item_options"
                android:src="@drawable/ic_fishs_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_menor"
                android:text="@string/cat_peixes"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_option_exoticos"
            android:layout_width="@dimen/toolbar_width_item_options"
            android:layout_height="@dimen/toolbar_height_options"
            android:orientation="vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:paddingLeft="@dimen/toolbar_padding_lr_item_options"
            android:paddingRight="@dimen/toolbar_padding_lr_item_options"
            android:paddingTop="@dimen/toolbar_padding_tb_item_options"
            android:paddingBottom="@dimen/toolbar_padding_tb_item_options">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="@dimen/toolbar_dimen_image_item_options"
                android:src="@drawable/ic_exoticos_1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_menor"
                android:text="@string/cat_exoticos"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>